--- a/TP Final/auto.html
+++ b/TP Final/auto.html
@@ -39,13 +39,13 @@
                     <div class="caja7">
                         <h2>Paquetes turísticos</h2>
                     </div>
-                    <div class="caja8">
+                    <div class="caja11">
                         <a href="index.html">Vuelo + Alojamiento</a>
                     </div>
                     <div class="caja9">
                         <a href="2alojamientos.html">Vuelo + 2 Alojamientos</a>
                     </div>
-                    <div class="caja10">
+                    <div class="caja12">
                         <a href="auto.html">Vuelo + Auto</a> 
                     </div>
                 </div>
@@ -55,8 +55,7 @@
                     <input type="text" placeholder="Destino">
                     <input type="text" placeholder="Fecha de ida">
                     <input type="text" placeholder="Fecha de vuelta">
-                    <input type="text" placeholder="Cantidad de camas">
-                    <input type="text" placeholder="Cantidad de personas">
+                    <input type="text" placeholder="Cantidad de pasajeros">
                     <div class="buscar">
                         <h2>Buscar</h2>
                     </div>
