--- a/TP Final/2alojamientos.html
+++ b/TP Final/2alojamientos.html
@@ -39,10 +39,10 @@
                     <div class="caja7">
                         <h2>Paquetes turísticos</h2>
                     </div>
-                    <div class="caja8">
+                    <div class="caja11">
                         <a href="index.html">Vuelo + Alojamiento</a>
                     </div>
-                    <div class="caja9">
+                    <div class="caja13">
                         <a href="2alojamientos.html">Vuelo + 2 Alojamientos</a>
                     </div>
                     <div class="caja10">
@@ -55,12 +55,15 @@
                     <input type="text" placeholder="Destino">
                     <input type="text" placeholder="Fecha de ida">
                     <input type="text" placeholder="Fecha de vuelta">
+                    <input type="text" placeholder="Primer Destino">
+                    <input type="text" placeholder="Fecha de vuelta del primer destino">
+                    <input type="text" placeholder="Segundo Destino">
+                    <input type="text" placeholder="Fecha de ida del segundo destino">
                     <input type="text" placeholder="Cantidad de camas">
                     <input type="text" placeholder="Cantidad de personas">
                     <div class="buscar">
                         <h2>Buscar</h2>
                     </div>
-                </div>
         </div>
     </div>
     <br>
