--- a/TP Final/index.html
+++ b/TP Final/index.html
@@ -16,9 +16,13 @@
         </div>
         <nav>
             <div class="caja1">
+                <div class="ventas">
+                    <img src="https://static.vecteezy.com/system/resources/previews/027/845/513/non_2x/headset-icon-headset-logo-illustration-logo-template-for-many-purpose-isolated-on-white-background-free-vector.jpg">
+                    <a href="tel:0810 810 9994" target="_blank">Para ventas 0810 810 9994</a>
+                </div>
                 <div class="caja2">
                     <img src="https://cdn-icons-png.flaticon.com/512/0/827.png">
-                    <a href="#">Ayuda</a>
+                    <a href="https://www.despegar.com.ar/help"target="_blank">Ayuda</a>
                 </div>
                 <div class="caja3">
                     <img src="https://previews.123rf.com/images/yupiramos/yupiramos1606/yupiramos160621068/59174803-vista-frontal-maleta-de-viaje-blanco-y-negro-sobre-fondo-aislado-ilustración-vectorial.jpg">
@@ -34,33 +38,33 @@
         </header>
     <div class="caja5">
         <br>
-            <div class="fondo1">
-                <div class="caja6">
-                    <div class="caja7">
-                        <h2>Paquetes turísticos</h2>
-                    </div>
-                    <div class="caja8">
-                        <a href="index.html">Vuelo + Alojamiento</a>
-                    </div>
-                    <div class="caja9">
-                        <a href="2alojamientos.html">Vuelo + 2 Alojamientos</a>
-                    </div>
-                    <div class="caja10">
-                        <a href="auto.html">Vuelo + Auto</a> 
-                    </div>
+        <div class="fondo1">
+            <div class="caja6">
+                <div class="caja7">
+                    <h2>Paquetes turísticos</h2>
                 </div>
-                <div class="contenedor">
-                    <br>
-                    <input type="text" placeholder="Origen">
-                    <input type="text" placeholder="Destino">
-                    <input type="text" placeholder="Fecha de ida">
-                    <input type="text" placeholder="Fecha de vuelta">
-                    <input type="text" placeholder="Cantidad de camas">
-                    <input type="text" placeholder="Cantidad de personas">
-                    <div class="buscar">
-                        <h2>Buscar</h2>
-                    </div>
+                <div class="caja8">
+                    <a href="index.html">Vuelo + Alojamiento</a>
                 </div>
+                <div class="caja9">
+                    <a href="2alojamientos.html">Vuelo + 2 Alojamientos</a>
+                </div>
+                <div class="caja10">
+                    <a href="auto.html">Vuelo + Auto</a> 
+                </div>
+            </div>
+            <div class="contenedor">
+                <br>
+                <input type="text" placeholder="Origen">
+                <input type="text" placeholder="Destino">
+                <input type="text" placeholder="Fecha de ida">
+                <input type="text" placeholder="Fecha de vuelta">
+                <input type="text" placeholder="Cantidad de camas">
+                <input type="text" placeholder="Cantidad de personas">
+                <div class="buscar">
+                    <h2>Buscar</h2>
+                </div>
+            </div>
         </div>
     </div>
     <br>
@@ -84,7 +88,7 @@
             <p>Tenemos varios canales de atención para que planifiques tu viaje con la asesoría de nuestros agentes expertos.</p>
         </div>
         <div class="Canales">
-            <p><strong></s>Conocer Canales</strong></p>
+            <a href="https://www.despegar.com.ar/informacion/canales" target="_blank">Conocer Canales</a>
         </div>
     </div>
     <br>
@@ -120,7 +124,7 @@
             </div>
         </div>
         <div class="Canales">
-            <p><strong></s>Pedila ahora</strong></p>
+            <a href="https://www.despegar.com.ar/pasaporte/tarjeta-despegar-icbc?source=HOME" target="_blank">Pedila ahora</a>
         </div>
     </div>
     <br>
@@ -144,6 +148,70 @@
                     <p><strong></s>Quiero Suscribirme</strong></p>
                 </div>
             </div>
+        </div>
+    </div>
+    <br>
+    <h2>Comprá en Despegar todo para tu viaje</h2>
+    <div class="cards">
+        <div class="card1">
+            <h2>¿Cómo comprar en Despegar?</h2>
+            <p><a href="https://www.despegar.com.ar/ayuda" target="_blank">En Despegar podés comprar todo para tus vacaciones muy fácilmente. Primero, ingresá la información de tu viaje en el buscador. Compará entre cientos de opciones y elegí la que más te guste desde el botón Comprar. Cargá los datos de los pasajeros, seleccioná tu medio de pago y completá la información requerida. ¡Aprovechá las promociones bancarias de Despegar! Por último, tocá nuevamente en Comprar y ¡listo! Te mandamos los vouchers por mail y ya podés empezar a disfrutar tu viaje.</a></p>
+        </div>
+        <div class="card1">
+            <h2>Documentación necesaria para comprar y viajar</h2>
+            <p><a href="https://www.despegar.com.ar/ayuda" target="_blank">Para comprar tu viaje en Despegar tené a mano el número de documento de identidad, el nombre, el apellido y la fecha de nacimiento de cada uno de los pasajeros. Antes de viajar, revisá el detalle de tu reserva en Mi Cuenta para conocer las visas y vacunas exigidas en el país de destino. Esto incluye las escalas, conexiones, tours y paradas que hagas durante tu viaje. Si un menor viaja solo o acompañado, deberá contar con una autorización obligatoria para salir del país.</a></p>
+        </div>
+        <div class="card1">
+            <h2>¿Se puede modificar o cancelar una compra?</h2>
+            <p><a href="https://www.despegar.com.ar/ayuda" target="_blank">En Despegar podés gestionar el cambio o la cancelación de una reserva, aunque tené en cuenta que algunos proveedores o tarifas no lo permiten o cobran un costo adicional por hacerlo. En vuelos, hoteles y autos, solo podés hacer cambios con el mismo proveedor. También podés cancelar una reserva para todos o algunos de los pasajeros. Lo que no podés hacer es cambio de titularidad a otra persona. Recordá revisar las políticas de cambio y cancelación de tu reserva en Mi Cuenta.</a></p>
+        </div>
+        <div class="card1">
+            <h2>¿Por qué elegir Despegar para tu viaje?</h2>
+            <p><a href="https://www.despegar.com.ar/ayuda" target="_blank">Despegar es una de las agencias de viaje con más trayectoria de Latinoamérica, reconocida y recomendada por miles de viajeros de todo el continente. Aprovechá nuestras ofertas y promociones de viaje y recorré el mundo entero. Comprá tu viaje en Despegar Argentina desde la web, la app o por Despegar teléfono: 0810 810 9994. ¿Tenés dudas o necesitás ayuda? Podés llamarnos en todo momento al centro de Despegar atención al cliente y viajá con la confianza de saber que estamos con vos.</a></p>
+        </div>  
+    </div>
+    <br>
+    <div class="card">
+        <br>
+        <h2> Agencia de viajes </h2>
+        <p>¿Estás listo para embarcarte en una nueva aventura? Despegar, tu agencia de viajes de confianza, te ofrece todo lo que necesitas para que tu próximo viaje sea inolvidable. Olvídate de los problemas de planificación, con nuestros vuelos baratos, hoteles, actividades y traslados, podrás armar un paquete a medida y encontrar todas las soluciones para tu viaje en un solo lugar. Al elegir Despegar, estarás dando el primer paso para vivir una experiencia de viaje integral y personalizada, ajustada a tus necesidades y presupuesto.</p>
+        <h3>¿Por qué elegir a Despegar como tu Agencia de Viajes?</h3>
+        <p>En Despegar, comprendemos que cada viaje es único y es por eso que nos esforzamos por ofrecer opciones que se ajusten a tu estilo de vida y tus necesidades. Más que una simple agencia de viajes, Despegar se destaca por su compromiso con la satisfacción del cliente, ofreciendo una amplia gama de productos y servicios, y asegurándose de que cada detalle esté cuidado para que puedas concentrarte en disfrutar del viaje. Desde vuelos económicos hasta hoteles de lujo, traslados eficientes y actividades emocionantes, tenemos todo lo que necesitas para tu próxima escapada</p>
+        <h3>Comprá tu viaje al mejor precio</h3>
+        <p>Con Despegar, hacer tus sueños de viaje realidad no tiene por qué costar una fortuna. Nuestra plataforma intuitiva y fácil de usar te permite comparar precios, leer opiniones de otros viajeros y reservar con solo unos pocos clics. Además, ofrecemos constantemente cupones, promociones y descuentos especiales para que puedas aprovechar al máximo tu presupuesto de viaje. Viajar es más que llegar a un destino, es una experiencia que comienza desde el momento en que empezás a planificar. Despegar, tu agencia de viajes, está acá para asegurarse de que cada paso de tu viaje sea tan emocionante como el destino final.</p>
+    </div>
+    <br>
+    <div class="last">
+        <div class="last1">
+            <h3>Paquetes</h3>
+            <a href="https://www.despegar.com.ar/paquetes/pmy/paquetes-a-puerto+madryn" target="_blank">Paquetes a Puerto Madryn</a>
+            <a href="https://www.despegar.com.ar/paquetes/bzc/paquetes-a-buzios" target="_blank">Viajes a Buzios</a>
+            <a href="https://www.despegar.com.ar/paquetes/cpc/paquetes-a-san+martin+de+los+andes" target="_blank">Viajes a San Martín de Los Andes</a>
+            <a href="https://www.despegar.com.ar/paquetes/ag1/paquetes-a-machu+picchu+pueblo" target="_blank">Paquetes a Machu Picchu Pueblo</a>
+        </div>
+        <div class="last2">
+            <h3>Pasajes</h3>
+            <a href="https://www.despegar.com.ar/vuelos/" target="_blank">Vuelos baratos</a>
+            <a href="https://www.despegar.com.ar/vuelos/sla/vuelos-a-salta" target="_blank">Vuelos a Salta</a>
+            <a href="https://www.despegar.com.ar/vuelos/aerolineas/iberia" target="_blank">Iberia</a>
+            <a href="https://www.despegar.com.ar/vuelos/aerolineas/flybondi" target="_blank">Flybondi</a>
+        </div>
+        <div class="last3">
+            <h3>Alojamientos Baratos</h3>
+            <a href="https://www.despegar.com.ar/hoteles/hl/7781/i1/hoteles-en-ushuaia" target="_blank">Hoteles en Ushuaia</a>
+            <a href="https://www.despegar.com.ar/hoteles/hl/6846/i1/hoteles-en-salta" target="_blank">Hoteles en Salta</a>
+            <a href="https://www.despegar.com.ar/hoteles/hl/4451/i1/hoteles-en-mendoza" target="_blank">Hoteles en Mendoza</a>
+            <a href="https://www.despegar.com.ar/hoteles/hl/982/i1/hoteles-en-buenos+aires" target="_blank">Hoteles en Buenos Aires</a>
+        </div>
+        <div class="last4">
+            <h3>Cabañas</h3>
+            <a href="https://www.despegar.com.ar/hoteles/hl/264/tCAB/i1/cabanas-en-villa+la+angostura" target="_blank">Cabañas Villa la Angostura</a>
+            <a href="https://www.despegar.com.ar/hoteles/hl/901/tCAB/i1/cabanas-en-san+carlos+de+bariloche" target="_blank">Cabañas en Bariloche</a>
+        </div>
+        <div class="last5">
+            <h3>Cabañas y Alquileres</h3>
+            <a href="https://www.despegar.com.ar/alojamientos/departamentos-en-alquiler-en-mar+de+las+pampas/4703/vr/i1" target="_blank">Mar de las Pampas alquiler</a>
+            <a href="https://www.despegar.com.ar/alojamientos/departamentos-en-alquiler-en-mar+del+plata/4445/vr/i1" target="_blank">Departamentos en Mar del Plata</a>
         </div>
     </div>
 </body>
