--- a/TP Final/login.html
+++ b/TP Final/login.html
@@ -18,7 +18,7 @@
             <div class="caja1">
                 <div class="caja2">
                     <img src="https://cdn-icons-png.flaticon.com/512/0/827.png">
-                    <a href="#">Ayuda</a>
+                    <a href="https://www.despegar.com.ar/ayuda/" target="_blank">Ayuda</a>
                 </div>
             </div>
         </nav>
@@ -27,20 +27,20 @@
     <div class="login">
         <h2>Bienvenido a tu próximo viaje</h2>
         <div class="Facebook">
-            <a class="AccederF" href="#">Acceder con Facebook</a>
+            <a class="AccederF" href="https://www.facebook.com/login.php?skip_api_login=1&api_key=541577542537589&kid_directed_site=0&app_id=541577542537589&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fv3.2%2Fdialog%2Foauth%3Fapp_id%3D541577542537589%26auth_type%3Drerequest%26cbt%3D1700941008085%26channel_url%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Dfef80f62e99b54%2526domain%253Dwww.despegar.com.ar%2526is_canvas%253Dfalse%2526origin%253Dhttps%25253A%25252F%25252Fwww.despegar.com.ar%25252Ff12b7fce8236f38%2526relation%253Dopener%26client_id%3D541577542537589%26display%3Dpopup%26domain%3Dwww.despegar.com.ar%26e2e%3D%257B%257D%26fallback_redirect_uri%3Dhttps%253A%252F%252Fwww.despegar.com.ar%252Flogin%253Fredirect_to%253D%25252Fme%25252Fbookings%253Fas_referer%253Dshifu_header%26locale%3Den_US%26logger_id%3Df17d1ce21efdf84%26origin%3D1%26redirect_uri%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Df1b6e2056f10a74%2526domain%253Dwww.despegar.com.ar%2526is_canvas%253Dfalse%2526origin%253Dhttps%25253A%25252F%25252Fwww.despegar.com.ar%25252Ff12b7fce8236f38%2526relation%253Dopener%2526frame%253Df20e1513ab102a%26response_type%3Dtoken%252Csigned_request%252Cgraph_domain%26scope%3Dpublic_profile%252C%2Bemail%26sdk%3Djoey%26version%3Dv3.2%26ret%3Dlogin%26fbapp_pres%3D0%26tp%3Dunspecified&cancel_url=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df1b6e2056f10a74%26domain%3Dwww.despegar.com.ar%26is_canvas%3Dfalse%26origin%3Dhttps%253A%252F%252Fwww.despegar.com.ar%252Ff12b7fce8236f38%26relation%3Dopener%26frame%3Df20e1513ab102a%26error%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied&display=popup&locale=es_ES&pl_dbl=0" target="_blank">Acceder con Facebook</a>
         </div>
         <br>
         <div class="Google">
-            <a class="AccederG" href="#">Acceder con Google</a>
+            <a class="AccederG" href="https://accounts.google.com/gsi/select?client_id=3144130631.apps.googleusercontent.com&ux_mode=popup&ui_mode=card&as=Y9yN5uBD8Q7orGm8tdQZyA&channel_id=17b5c8a5f0cd093c24a2f95a55d67de0d9a9ab962880572ca2f26b0183339b30&origin=https%3A%2F%2Fwww.despegar.com.ar" target="_blank">Acceder con Google</a>
         </div>
         <br>
         <div class="email">
-            <a class="AccederF" href="#">Acceder con tu email</a>
+            <a class="AccederF" href="https://www.despegar.com.ar/login/signin" target="_blank">Acceder con tu email</a>
         </div>
         <br>
         <br>
         <div class="Registrarte">
-            <a class="AccederF" href="#">Registrarte</a>
+            <a class="AccederF" href="https://www.despegar.com.ar/login/signup" target="_blank">Registrarte</a>
         </div>
     </div>
 </body>
